--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <div id="game">
       <div id="status">Move your mouse over a square and click to play an X or an O.</div>
       <div id="board">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class ="square" id="1"></div>
+        <div class ="square" id="2"></div>
+        <div class ="square" id="3"></div>
+        <div class ="square" id="4"></div>
+        <div class ="square" id="5"></div>
+        <div class ="square" id="6"></div>
+        <div class ="square" id="7"></div>
+        <div class ="square" id="8"></div>
+        <div class ="square" id="9"></div>
       </div>
       <div class="controls">
-        <button class="btn">New Game</button>
+        <button class="btn" id="button">New Game</button>
       </div>
     </div>
   </body>
